Más refactorizaciones.